# TermFlow

./: .gitignore  .replit  HELP.md  MANIFEST.in  README.md  config.json  main.py  package.json  pyproject.toml  replit.md  styles.tcss  todos.json
TermFlow/: .replit
WebFolder/: index.html  script.js  style.css
attached_assets/: Pasted--TERMFLOW-PRODUCTION-IMPLEMENTATION-PROMPT-You-are-work_1768936799456.txt  Pasted--THE-ACTUAL-ROOT-CAUSE-100-certain-now-In-Textual-h-and_1769265252322.txt  Pasted--workspace-python-main-py-Traceback-mos-1769266700232_1769266700233.txt  Pasted-Context-This-is-a-Python-TUI-app-built-using-the-Textua_1769324510929.txt  Pasted-Context-You-are-working-on-a-terminal-based-productivit_1768920678350.txt  Pasted-READ-CAREFULLY-FOLLOW-EXACTLY-DO-NOT-BREAK-EXISTING-FUN_1769193228564.txt  Pasted-READ-CAREFULLY-FOLLOW-EXACTLY-DO-NOT-SIMPLIFY-DO-NOT-RE_1769132294871.txt  Pasted-ROLE-You-are-a-Python-packaging-and-release-engineer-Th_1769321995459.txt  Pasted-SYSTEM-DEVELOPER-PROMPT-You-are-working-on-a-serious-pr_1769073055738.txt  (+16 more)
termflow/: main.py  pyproject.toml
termflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
termflow/panels/: clock.py  info.py  info_panel.py  pomodoro.py  todo.py  todo_list.py
termflow/termflow/: main.py
termflow/termflow/data/: config.toml
termflow/termflow/panels/: clock.py  info.py  pomodoro.py  todo.py  todo_list.py
termflow/termflow/ui/: app.py  styles.tcss
termflow/termflow/utils/: open_docs.py  storage.py  todos.py
termflow/ui/: app.py  styles.tcss  styles.tcss.bak
termflow/utils/: quotes.py  storage.py  todos.py  weather.py
