[project]
name = "termflow"
version = "0.1.0"
description = "Minimalist terminal productivity hub"
dependencies = [
    "textual",
    "requests",
    "platformdirs",
]

[project.scripts]
termflow = "termflow.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
